modules/gdscript/tests/scripts/analyzer/errors/vararg_typed_array_rest.gd
func f(...args: Array[int]):
	pass

func test():
	pass
